<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:gravity="left">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/padding"
            android:text="@string/q1_header"
            android:textColor="@android:color/black"
            android:textSize="@dimen/question_header"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:fontFamily="sans-serif-medium"
            android:text="@string/q1_question"
            android:textColor="@android:color/black"
            android:textSize="@dimen/question_text"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/margin"
            android:id="@+id/q1_group">

            <RadioButton
                android:id="@+id/q1_radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_answer1"
                android:textAppearance="?android:textAppearanceMedium"/>

            <RadioButton
                android:id="@+id/q1_radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_answer2"
                android:textAppearance="?android:textAppearanceMedium"/>

            <RadioButton
                android:id="@+id/q1_radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_answer3"
                android:textAppearance="?android:textAppearanceMedium"/>
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:layout_margin="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/padding"
            android:text="@string/q2_header"
            android:textColor="@android:color/black"
            android:textSize="@dimen/question_header"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:fontFamily="sans-serif-medium"
            android:text="@string/q2_question"
            android:textColor="@android:color/black"
            android:textSize="@dimen/question_text"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/quiz_image_height"
            android:src="@drawable/stanleycup"/>

        <EditText
            android:id="@+id/q2_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/q2_edit_text_hint"
            android:inputType="textCapWords"
            android:padding="@dimen/padding"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:layout_margin="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:background="@android:color/darker_gray"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/padding"
            android:text="@string/q3_header"
            android:textColor="@android:color/black"
            android:textSize="@dimen/question_header"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:fontFamily="sans-serif-medium"
            android:text="@string/q3_question"
            android:textColor="@android:color/black"
            android:textSize="@dimen/question_text"/>

        <CheckBox
            android:id="@+id/q3_checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:text="@string/q3_answer1"
            android:textAppearance="?android:textAppearanceMedium"/>

        <CheckBox
            android:id="@+id/q3_checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:text="@string/q3_answer2"
            android:textAppearance="?android:textAppearanceMedium"/>

        <CheckBox
            android:id="@+id/q3_checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:text="@string/q3_answer3"
            android:textAppearance="?android:textAppearanceMedium"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:layout_margin="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/padding"
            android:text="@string/q4_header"
            android:textColor="@android:color/black"
            android:textSize="@dimen/question_header"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:fontFamily="sans-serif-medium"
            android:text="@string/q4_question"
            android:textColor="@android:color/black"
            android:textSize="@dimen/question_text"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/q4_group">

            <RadioButton
                android:id="@+id/q4_radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:text="@string/q4_answer1"
                android:textAppearance="?android:textAppearanceMedium"/>

            <RadioButton
                android:id="@+id/q4_radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:text="@string/q4_answer2"
                android:textAppearance="?android:textAppearanceMedium"/>

            <RadioButton
                android:id="@+id/q4_radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:text="@string/q4_answer3"
                android:textAppearance="?android:textAppearanceMedium"/>
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:layout_margin="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/padding"
            android:text="@string/q5_header"
            android:textColor="@android:color/black"
            android:textSize="@dimen/question_header"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:fontFamily="sans-serif-medium"
            android:text="@string/q5_question"
            android:textColor="@android:color/black"
            android:textSize="@dimen/question_text"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/q5_group">

            <RadioButton
                android:id="@+id/q5_radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:text="@string/q5_answer1"
                android:textAppearance="?android:textAppearanceMedium"/>

            <RadioButton
                android:id="@+id/q5_radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:text="@string/q5_answer2"
                android:textAppearance="?android:textAppearanceMedium"/>

            <RadioButton
                android:id="@+id/q5_radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:text="@string/q5_answer3"
                android:textAppearance="?android:textAppearanceMedium"/>
        </RadioGroup>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:background="@android:color/darker_gray"
            android:text="@string/button_text"
            android:onClick="submitAnswers"/>
    </LinearLayout>
</ScrollView>
